# tongyi-aggregate-synthesis

./: .env.example  .gitignore  Dockerfile  ENHANCEMENT_ROADMAP.md  P1_ENHANCEMENTS.md  README.md  docker-compose.yml  pyproject.toml  run_mcp.py
docs/: api.md  architecture.md  configuration.md  deployment.md  examples.md  installation.md
scripts/: competitive_analysis.py  deploy.sh
src/: config.py  llm_client.py  llm_utils.py  main.py  mcp_server.py
src/api/: routes.py  schemas.py
src/connectors/: linkup.py  searxng.py  tavily.py
src/discovery/: __init__.py  decomposer.py  expansion.py  explorer.py  focus_modes.py  routing.py
src/search/: aggregator.py
src/synthesis/: __init__.py  aggregator.py  contradictions.py  engine.py  enhanced.py  outline.py  presets.py  quality_gate.py  rcs.py
tests/: conftest.py  test_aggregator.py  test_cache.py  test_connectors.py  test_e2e.py  test_enhanced_endpoints.py  test_fusion.py  test_mcp_e2e.py  test_p1_enhancements.py  test_performance.py
